# Multinomial-Group-Testing

./: .gitignore
cpp/: CMakeLists.txt  Makefile  Makefile.old  bmgt.pc  core.h  core.hpp  job.slurm  license.txt
cpp/examples/: run_BBPA_benchmark.cpp  run_BBPA_benchmark_intra.cpp  run_dist_glob_tree.cpp  run_dist_glob_tree_symm.cpp  run_dist_glob_tree_trim.cpp  run_dist_tree.cpp  run_dist_tree_intra.cpp  run_fusion_tree.cpp  run_glob_partial_tree_symm.cpp  run_glob_partial_tree_trim.cpp  run_glob_partial_tree_trim_misspec.cpp  run_glob_tree.cpp  run_glob_tree_intra.cpp  run_model_manipulation_benchmark.cpp  run_test_selection.cpp  run_test_selection_intra.cpp
cpp/exec/: BBPA_benchmark.cpp  BBPA_benchmark_intra.cpp  dist_glob_tree.cpp  dist_glob_tree_symm.cpp  dist_glob_tree_trim.cpp  dist_tree.cpp  dist_tree_intra.cpp  fusion_tree.cpp  glob_partial_tree_symm.cpp  glob_partial_tree_trim.cpp  glob_partial_tree_trim_misspec.cpp  glob_tree.cpp  glob_tree_intra.cpp  individual_test.cpp  model_manipulation_benchmark.cpp  run_dist_glob_tree.cpp  run_dist_glob_tree_symm.cpp  run_dist_glob_tree_trim.cpp  run_dist_tree.cpp  run_dist_tree_intra.cpp  run_fusion_tree.cpp  run_glob_tree.cpp  run_glob_tree_intra.cpp  run_global_partial_tree.cpp  run_global_partial_tree_symm.cpp  run_global_partial_tree_trim.cpp  run_global_partial_tree_trim_misspecification.cpp  run_individual_test.cpp  run_test_selection.cpp  run_test_selection_intra.cpp  start.cpp  start_fusion_tree_mpi.cpp  start_global_tree.cpp  start_global_tree_mpi.cpp  start_mpi.cpp  start_mpi_dbg.cpp  start_test_selection.cpp  test_selection.cpp  test_selection_intra.cpp  test_selection_mpi.cpp
cpp/include/: BBPA_unroll.hpp  bmgt.h  bmgt.h.in  common.hpp  core.hpp  dilution.hpp  distributed_tree.hpp  doubly_linked_global_tree_mpi.hpp  fusion_tree.hpp  fusion_tree_mpi.hpp  global_partial_tree.hpp  global_tree.hpp  global_tree_intra.hpp  global_tree_mpi.hpp  halving_res.hpp  intrinsic_wrapper.hpp  lattice_shrinking.hpp  log.h  product_lattice.hpp  product_lattice_dilution.hpp  product_lattice_mp.hpp  product_lattice_mp_dilution.hpp  product_lattice_mp_non_dilution.hpp  product_lattice_non_dilution.hpp  tree.hpp  tree_perf.hpp  tree_stat.hpp  tree_symm.hpp  tree_trim.hpp
cpp/product_lattice/: dilution.cpp  lattice_shrinking.cpp  product_lattice.cpp  product_lattice_dilution.cpp  product_lattice_dist.cpp  product_lattice_mp.cpp  product_lattice_mp_non_dilution.cpp  product_lattice_non_dilution.cpp
cpp/product_lattice_model/: intrin_helper.h  product_lattice.cpp  product_lattice.hpp  product_lattice_dilution.cpp  product_lattice_dilution.hpp  product_lattice_mp.cpp  product_lattice_mp.hpp  product_lattice_mp_dilution.cpp  product_lattice_mp_dilution.hpp  product_lattice_mp_non_dilution.cpp  product_lattice_mp_non_dilution.hpp  product_lattice_non_dilution.cpp  product_lattice_non_dilution.hpp
cpp/product_lattice_model/halving_res/: halving_res.hpp
cpp/product_lattice_model/lattice_shrinking/: lattice_shrinking.cpp  lattice_shrinking.hpp
cpp/statistical_analysis/: start.cpp  start_mp.cpp  start_mpi.cpp  start_test_selection.cpp  test_selection_mpi.cpp
cpp/statistical_analysis/tree/: distributed_tree.cpp  doubly_linked_global_tree_mpi.cpp  fusion_tree.cpp  fusion_tree_mpi.cpp  global_partial_tree.cpp  global_tree.cpp  global_tree.hpp  global_tree_intra.cpp  global_tree_mp.cpp  global_tree_mp.hpp  global_tree_mpi.cpp  global_tree_mpi.hpp  single_tree.cpp  single_tree.hpp  single_tree_mpi.cpp  single_tree_mpi.hpp  tree.cpp
cpp/statistical_analysis/util/: tree_perf.hpp  tree_stat.cpp  tree_stat.hpp  tree_symm.cpp  tree_trim.cpp
cuda/: BMGT_gpu_kernel.cu  ex_frac.cu  ex_frac_64.cu  ex_intra.cu  ex_major.cu  st_major.cu
cuda/single_node_experimental_kernels/: ex_intra.cu  ex_major.cu  st_major.cu
java/: pom.xml
java/src/main/java/edu/cwru/bayesmultinomialtestingbitwise/lattices/: ProductLatticeBitwise.java  ProductLatticeBitwiseBase.java  ProductLatticeBitwiseNonDilution.java
java/src/main/java/edu/cwru/bayesmultinomialtestingbitwise/tree/: SingleTree.java
main/: pom.xml
main/src/main/java/edu/cwru/bayesmultinomialtesting/lattices/: ProductLatticeBase.java  ProductLatticeNonDilution.java
main/src/main/java/edu/cwru/bayesmultinomialtesting/simulation/: RunIndividualTestingSimulation.java  RunSimulation.java
main/src/main/java/edu/cwru/bayesmultinomialtesting/tree/: IndividualTestingTree.java  SingleTree.java
main/src/main/java/edu/cwru/bayesmultinomialtesting/tree/util/: TreeStat.java
main/src/main/java/edu/cwru/bayesmultinomialtesting/utilities/: Pair.java  Utility.java
main/src/main/java/edu/cwru/bayesmultinomialtestingbitwise/lattices/: ProductLatticeBitwise.java  ProductLatticeBitwiseBase.java  ProductLatticeBitwiseDilution.java  ProductLatticeBitwiseNonDilution.java
main/src/main/java/edu/cwru/bayesmultinomialtestingbitwise/simulation/: RunSimulation.java
main/src/main/java/edu/cwru/bayesmultinomialtestingbitwise/tests/: SingleTreeTest.java
main/src/main/java/edu/cwru/bayesmultinomialtestingbitwise/tool/: Debug.java
main/src/main/java/edu/cwru/bayesmultinomialtestingbitwise/tree/: SingleTree.java
main/src/main/java/edu/cwru/bayesmultinomialtestingbitwise/tree/util/: TreeStat.java
